HelloUltraviolet/Fixtures/RejectedSource/Expressions/ValueUseNonBitcopyPlace/Source/Main.uv
//! Rejected value-use specimen for a non-Bitcopy place expression.

public procedure valueUseNonBitcopyPlaceReference() -> unique i32 {
    let payload: unique i32 = 1
    return payload
}
